2000-06-18  James Henstridge  <james@daa.com.au>

	* gtk/gtkmodule.c (init_gtk): change names of some functions.

	* gtk/gtk.override: add a headers section to include the required
	header.

	* codegen/codegen.py (register_types): allow specifying the prefix
	for the type registration function and module functions array.
	Insert header and init code in generated code.

	* codegen/override.py (Overrides.get_init): add support for headers
	and init sections for the override file.  These get inserted at the
	top of the generated code and in the init function respectively.

2000-06-17  James Henstridge  <james@daa.com.au>

	* gtk/gtk.defs: fix up a few function names.

	* gtk/gtk.override: added some drawing and pixmap function
	implementations.

	* gtk/gdk.defs: updated some function names.

	* gtk/gtk.override: add a few more overrides for difficult functions.

2000-05-20  James Henstridge  <james@daa.com.au>

	* gtk/gtk-types.c: undef Py_FindMethod, so we don't end up using the
	overloaded extensionclass version here.

2000-05-12  James Henstridge  <james@daa.com.au>

	* gtk/__init__.py (__all__): add imlib to module list.

	* examples/imlib/view.py: ported over to using new pygtk.

	* gtk/imlibmodule.c: make sure we don't use the ExtensionClass version
	of Py_FindMethod, as it doesn't have the same semantics.

	* gtk/pygtk.h (init_pygtk): as pygtk.h causes ExtensionClass to be
	imported, make sure ExtensionClass is inited for this file as well.

	* gtk/imlibmodule.c: port of the imlib module over to new pygtk.

	* codegen/argtypes.py: added support for GdkVisual to code generator.

	* gtk/gtkobject-support.c: added support for GdkVisual for marshalling
	functions.

	* gtk/gtk-types.c, gtk/pygtk.h, gtk/pygtk-private.h: added GdkVisual
	type.

	* gtk/gtkmodule.c (init_gtk): add the _PyGtk_API variable to the
	module dictionary, for use with pygtk extensions.

	* gtk/pygtk.h: update public pygtk header file.

2000-05-09  James Henstridge  <james@daa.com.au>
