@@ -20,3 +20,8 @@
   (parameter (type-and-name guint flags))
 )
 
+(method get_window
+  (of-object Widget (Gtk))
+  (c-name gtk_widget_get_window)
+  (return-type GdkWindow)
+)
